--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>John's Resolutions</title>
+  <title>Robby's Resolutions</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <div class="container">
-    <h1>John’s Resolutions</h1>
-    <p class="tagline">Every Month a New Resolution</p>
+    <h1>Robby’s Resolutions</h1>
+    <p class="tagline">Hosted on Heroku for the work to see</p>
     <div class="nav">
     <a class="navItem" href="index.html">Resolutions</a>
       <a class="navItem" href="about.html">About</a>
@@ -34,14 +34,14 @@
           <h2>Meditate every day</h2>
           <img src="images/meditating.jpg" alt="Meditating">
           <p class="resolution">Honestly, it’s January and I’m already stressed out! I’ve been thinking about meditating for a while now. This month I will take meditation classes and make time to meditate at least 10 minutes every day.</p>
-          <p class="byline">My January Resolution by John Doe</p>
+          <p class="byline">My January Resolution by Robby K</p>
         </div>
       </div>
       <div class="sidebar">
         <div class="widget">
           <div class="profilecontainer">
             <img class="profile" src="images/john-doe.jpg" alt="John Doe">
-            <h3>John Doe</h3>
+            <h3>Robby</h3>
           </div>
         </div>
         <div class="widget">
