--- a/client/about.html
+++ b/client/about.html
@@ -19,13 +19,13 @@
     <div class="columns">
       <div class="main">
         <h2>About</h2>
-        <p>I could write an essay about me here... But would you really read it?</p>
+        <p>I could write an essay about me here... But would you really read it? See my LinkedIn Profile</p>
       </div>
       <div class="sidebar">
         <div class="widget">
           <div class="profilecontainer">
             <img class="profile" src="images/john-doe.jpg" alt="John Doe">
-            <h3>John Doe</h3>
+            <h3>Robby K</h3>
           </div>
         </div>
         <div class="widget">
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <p class="footer">&copy; 2016 by <a href="mailto:john.doe@quinnipiac.edu" target="_blank">John Doe</a></p>
+    <p class="footer">&copy; 2016 by <a href="mailto:robby.klouda@quinnipiac.edu" target="_blank">Robby K</a></p>
   </div>
 </body>
 </html>
