--- a/client/contact.html
+++ b/client/contact.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>John's Resolutions</title>
+  <title>Robby's Resolutions</title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
   <div class="container">
-    <h1>John’s Resolutions</h1>
-    <p class="tagline">Every Month a New Resolution</p>
+    <h1>Robby’s Resolutions</h1>
+    <p class="tagline">Hosted on Heroku for the world to see</p>
     <div class="nav">
     <a class="navItem" href="index.html">Resolutions</a>
       <a class="navItem" href="about.html">About</a>
@@ -19,14 +19,14 @@
     <div class="columns">
       <div class="main">
        <h2>Contact</h2>
-       <p>The best way to contact me is via <a href="mailto:john@wuphf.com" target="_blank"> email. </p>
+       <p>The best way to contact me is via <a href="mailto:robby.klouda@quinnipiac.edu" target="_blank"> email. </p>
 
      </div>
       <div class="sidebar">
         <div class="widget">
           <div class="profilecontainer">
             <img class="profile" src="images/john-doe.jpg" alt="John Doe">
-            <h3>John Doe</h3>
+            <h3>Robby K</h3>
           </div>
         </div>
         <div class="widget">
@@ -43,7 +43,7 @@
         </div>
       </div>
     </div>
-    <p class="footer">&copy; 2016 by <a href="mailto:john.doe@quinnipiac.edu" target="_blank">John Doe</a></p>
+    <p class="footer">&copy; 2016 by <a href="mailto:robby.klouda@quinnipiac.edu" target="_blank">Robby K</a></p>
   </div>
 </body>
 </html>
