--- a/client/about.html
+++ b/client/about.html
@@ -12,6 +12,11 @@
     <div class="jumbotron">
       <h1>JavaScript Users code sample</h1>
       <p>Powered by QuickBlox</p>
+    <div class="nav">
+    <a class="navItem" href="index.html">Resolutions</a>
+      <a class="navItem" href="about.html">About</a>
+      <a class="navItem" href="contact.html">Contact</a>
+    </div>
     </div>
     <div class="row">
       <div class="col-sm-6">
