--- a/client/about.html
+++ b/client/about.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>QuickBlox JavaScript Users code sample</title>
+  <title>JetLoan</title>
   <link rel="shortcut icon" href="https://quickblox.com/favicon.ico">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>JavaScript Users code sample</h1>
+      <h1>JetLoan Database Access</h1>
       <p>Powered by QuickBlox</p>
     <div class="nav">
     <a class="navItem" href="index.html">Resolutions</a>
-      <a class="navItem" href="about.html">About</a>
+      <a class="navItem" href="about.html">JetLoan</a>
       <a class="navItem" href="contact.html">Contact</a>
     </div>
     </div>
