--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
     <p class="tagline">Hosted on Heroku for the work to see</p>
     <div class="nav">
     <a class="navItem" href="index.html">Resolutions</a>
-      <a class="navItem" href="about.html">About</a>
+      <a class="navItem" href="about.html">JetLoan</a>
       <a class="navItem" href="contact.html">Contact</a>
     </div>
     <div class="columns">
