--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <div class="nav">
     <a class="navItem" href="index.html">Resolutions</a>
       <a class="navItem" href="about.html">JetLoan</a>
-      <a class="navItem" href="contact.html">Contact</a>
+      <a class="navItem" href="contact.html">Q-ummicate</a>
     </div>
     <div class="columns">
       <div class="main">
