--- a/client/contact.html
+++ b/client/contact.html
@@ -28,6 +28,9 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
+                <a class="navItem" href="index.html">Resolutions</a>
+                <a class="navItem" href="about.html">JetLoan</a>
+               <a class="navItem" href="contact.html">Q-municate</a>
 <!--             <li><a href="#about"></a></li>
             <li><a href="#contact"></a></li> -->
           </ul>
