--- a/client/contact.html
+++ b/client/contact.html
@@ -28,9 +28,6 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-                <a class="navItem" href="index.html">Resolutions</a>
-                <a class="navItem" href="about.html">JetLoan</a>
-               <a class="navItem" href="contact.html">Q-municate</a>
 <!--             <li><a href="#about"></a></li>
             <li><a href="#contact"></a></li> -->
           </ul>
@@ -65,11 +62,16 @@
     <div id="posts-container"></div><!-- your posts will be here -->
   </div><!-- /.container -->
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <script src="../../quickblox.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/main.js"></script>
+<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/quickblox/2.4.0/quickblox.min.js"></script>
+  
+  <script src="https://cdn.digits.com/1/sdk.js" id="digits-sdk" async></script><!-- TWITTER_DIGITS SDK -->
+<!--  <script src="../../quickblox.min.js"></script> -->
+  <script src="config.js"></script>
+  <script src="main.js"></script>
 
   </body>
 </html>
