--- a/client/contact.html
+++ b/client/contact.html
@@ -70,8 +70,8 @@
   
   <script src="https://cdn.digits.com/1/sdk.js" id="digits-sdk" async></script><!-- TWITTER_DIGITS SDK -->
 <!--  <script src="../../quickblox.min.js"></script> -->
-  <script src="config.js"></script>
-  <script src="main.js"></script>
+  <script src="configCO.js"></script>
+  <script src="mainCO.js"></script>
 
   </body>
 </html>
