--- a/client/about.html
+++ b/client/about.html
@@ -15,7 +15,8 @@
     <div class="nav">
     <a class="navItem" href="index.html">Resolutions</a>
       <a class="navItem" href="about.html">JetLoan</a>
-      <a class="navItem" href="contact.html">Contact</a>
+      <a class="navItem" href="contact.html">QB Database</a>
+      <a class="navItem" href="contactQM.html">Q-municate</a>
     </div>
     </div>
     <div class="row">
