--- a/client/contact.html
+++ b/client/contact.html
@@ -28,8 +28,10 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-<!--             <li><a href="#about"></a></li>
-            <li><a href="#contact"></a></li> -->
+      <a class="navItem" href="index.html">Resolutions</a>
+      <a class="navItem" href="about.html">JetLoan</a>
+      <a class="navItem" href="contact.html">QB Database</a>
+      <a class="navItem" href="contactQM.html">Q-municate</a>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
