--- a/client/contactQM.html
+++ b/client/contactQM.html
@@ -58,6 +58,12 @@
 
         <section id="welcomePage" class="l-page">
             <div class="l-welcome_container">
+            <div class="nav">
+              <a class="navItem" href="index.html">Resolutions</a>
+              <a class="navItem" href="about.html">JetLoan</a>
+              <a class="navItem" href="contact.html">QB Database</a>
+             <a class="navItem" href="contactQM.html">Q-municate</a>
+            </div>
                 <div class="l-welcome_main_logo">
                     <div class="l-welcome_block l-welcome_logo"></div>
                     <div class="l-welcome_block l-welcome_text_logo">q-municate</div>
