--- a/client/about.html
+++ b/client/about.html
@@ -5,19 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>JetLoan</title>
   <link rel="shortcut icon" href="https://quickblox.com/favicon.ico">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+<!---  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
 </head>
 <body>
   <div class="container">
-    <div class="jumbotron">
-      <h1>JetLoan Database Access</h1>
-      <p>Powered by QuickBlox</p>
+    <h1>Robby’s Resolutions</h1>
+    <p class="tagline">Hosted on Heroku for the work to see</p>
     <div class="nav">
     <a class="navItem" href="index.html">Resolutions</a>
       <a class="navItem" href="about.html">JetLoan</a>
       <a class="navItem" href="contact.html">QB Database</a>
       <a class="navItem" href="contactQM.html">Q-municate</a>
     </div>
+    <div class="jumbotron">
+      <h1>JetLoan Database Access</h1>
+      <p>Powered by QuickBlox</p>
     </div>
     <div class="row">
       <div class="col-sm-6">
