--- a/client/about.html
+++ b/client/about.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>JetLoan</title>
   <link rel="shortcut icon" href="https://quickblox.com/favicon.ico">
-<!---  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/styleCO.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
