--- a/client/contact.html
+++ b/client/contact.html
@@ -9,13 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/styleCO.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
-
   <body>
-
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
-        <div class="navbar-header">
+    <h1>Robby’s Resolutions</h1>
+    <p class="tagline">Hosted on Heroku for the work to see</p>
+    <div class="nav">
+    <a class="navItem" href="index.html">Resolutions</a>
+      <a class="navItem" href="about.html">JetLoan</a>
+      <a class="navItem" href="contact.html">QB Database</a>
+      <a class="navItem" href="contactQM.html">Q-municate</a>
+    </div>
+     <!--   <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -32,7 +40,7 @@
       <a class="navItem" href="about.html">JetLoan</a>
       <a class="navItem" href="contact.html">QB Database</a>
       <a class="navItem" href="contactQM.html">Q-municate</a>
-          </ul>
+          </ul> -->
         </div><!--/.nav-collapse -->
       </div>
     </div>
