--- a/client/contact.html
+++ b/client/contact.html
@@ -23,7 +23,7 @@
       <a class="navItem" href="contact.html">QB Database</a>
       <a class="navItem" href="contactQM.html">Q-municate</a>
     </div>
-     <!--   <div class="navbar-header">
+    <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
@@ -36,11 +36,6 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-      <a class="navItem" href="index.html">Resolutions</a>
-      <a class="navItem" href="about.html">JetLoan</a>
-      <a class="navItem" href="contact.html">QB Database</a>
-      <a class="navItem" href="contactQM.html">Q-municate</a>
-          </ul> -->
         </div><!--/.nav-collapse -->
       </div>
     </div>
