--- a/client/contactQM.html
+++ b/client/contactQM.html
@@ -36,6 +36,11 @@
     <link rel="stylesheet" href="vendor/emoji/css/minEmoji.css">
     <link rel="stylesheet" href="bower_components/balloon-css/balloon.min.css">
 
+ <link rel="shortcut icon" href="https://quickblox.com/favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+
     <link rel="stylesheet" href=".css/main.css">
     <!-- endbuild -->
 
