--- a/client/contact.html
+++ b/client/contact.html
@@ -9,12 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="shortcut icon" href="https://quickblox.com/favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+    
+  <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/styleCO.css">
+  <link rel="stylesheet" href="css/styleCO.css"> -->
   </head>
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
     <h1>Robby’s Resolutions</h1>
     <p class="tagline">Hosted on Heroku for the work to see</p>
@@ -24,24 +24,7 @@
       <a class="navItem" href="contact.html">QB Database</a>
       <a class="navItem" href="contactQM.html">Q-municate</a>
     </div>
-   <!-- <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="https://quickblox.com/developers/Custom_Objects">
-            <img class="logo" src="images/logo-quickblox.png" alt="QuickBlox Samples" class="img-responsive"></a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div> -->
-
-
+ 
   <!-- Large modal -->
 
   <div class="modal fade bs-example-modal-lg in" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="auto-close">
