--- a/client/contact.html
+++ b/client/contact.html
@@ -9,10 +9,9 @@
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="shortcut icon" href="https://quickblox.com/favicon.ico">
-    
-  <!--  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="css/styleCO.css"> -->
+  <link rel="stylesheet" href="css/styleCO.css">
   </head>
   <body>
       <div class="container">
