--- a/client/contactQM.html
+++ b/client/contactQM.html
@@ -63,6 +63,8 @@
 
         <section id="welcomePage" class="l-page">
             <div class="l-welcome_container">
+        <h1>Robby’s Resolutions</h1>
+        <p class="tagline">Hosted on Heroku for the work to see</p>
             <div class="nav">
               <a class="navItem" href="index.html">Resolutions</a>
               <a class="navItem" href="about.html">JetLoan</a>
