--- a/client/contact.html
+++ b/client/contact.html
@@ -4,17 +4,19 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickBlox Sample Web Blog</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>JetLoan Blog</title>
     <link rel="shortcut icon" href="https://quickblox.com/favicon.ico">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+ <!--   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="css/styleCO.css">
-  </head>
+    <link rel="stylesheet" href="css/style.css"> -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
   <body>
-      <div class="container">
+  <div class="container">
     <h1>Robby’s Resolutions</h1>
     <p class="tagline">Hosted on Heroku for the work to see</p>
     <div class="nav">
@@ -23,7 +25,30 @@
       <a class="navItem" href="contact.html">QB Database</a>
       <a class="navItem" href="contactQM.html">Q-municate</a>
     </div>
- 
+    </<div>
+ <!--   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="https://quickblox.com/developers/Custom_Objects">
+            <img class="logo" src="images/logo-quickblox.png" alt="QuickBlox Samples" class="img-responsive"></a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="#">Home</a></li>
+             <li><a href="#about"></a></li>
+            <li><a href="#contact"></a></li>
+          </ul>
+        </div>
+      </div>
+    </div> -->
+
+
   <!-- Large modal -->
 
   <div class="modal fade bs-example-modal-lg in" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="auto-close">
@@ -31,12 +56,12 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-          <h4 class="modal-title" id="myLargeModalLabel">QuickBlox Sample Custom Object</h4>
+          <h4 class="modal-title" id="myLargeModalLabel">Add File</h4>
           </div>
         <div class="modal-body clearfix">
-          <input type="text" id="title_post" placeholder="Enter a title" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-          <textarea id="body_post" type="text" placeholder="Enter the text body" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"></textarea>
-        <button class="btn btn-primary" id="send_post" type="button" data-dismiss="modal" aria-hidden="true">Add new post</button>
+          <input type="text" id="title_post" placeholder="Enter a Filename" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+          <textarea id="body_post" type="text" placeholder="Enter the File description" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"></textarea>
+        <button class="btn btn-primary" id="send_post" type="button" data-dismiss="modal" aria-hidden="true">Add new file</button>
           </div>
       </div>
     </div>
@@ -45,21 +70,19 @@
   <div class="container" style="position:relative;">
     <a href="https://github.com/QuickBlox/quickblox-javascript-sdk/tree/gh-pages/samples/customobjects"
     style="position:absolute;top:20px;right:0px;font-size:0.85em;color:grey;">View source on GitHub</a>
-    <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg" id="add-btn">Add new post</button>
+    <button class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg" id="add-btn">Add new file</button>
     <img src="images/loader.gif" id="load-img">
     <div id="posts-container"></div><!-- your posts will be here -->
   </div><!-- /.container -->
 
-<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/quickblox/2.4.0/quickblox.min.js"></script>
-  
-  <script src="https://cdn.digits.com/1/sdk.js" id="digits-sdk" async></script><!-- TWITTER_DIGITS SDK -->
-<!--  <script src="../../quickblox.min.js"></script> -->
-  <script src="configCO.js"></script>
-  <script src="mainCO.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+  <script src="js/configCO.js"></script>
+  <script src="js/mainCO.js"></script>
 
   </body>
 </html>
