--- a/client/contact1.html
+++ b/client/contact1.html
@@ -4,38 +4,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuickBlox Sample Web Blog</title>
+    <title>JetLoan Blog</title>
     <link rel="shortcut icon" href="https://quickblox.com/favicon.ico">
+ <!--   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/style.css"> -->
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/styleCO.css">
-  </head>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="https://quickblox.com/developers/Custom_Objects">
-            <img class="logo" src="images/logo-quickblox.png" alt="QuickBlox Samples" class="img-responsive"></a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-<!--             <li><a href="#about"></a></li>
-            <li><a href="#contact"></a></li> -->
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+  <div class="container">
+    <h1>Robby’s Resolutions</h1>
+    <p class="tagline">Hosted on Heroku for the work to see</p>
+    <div class="nav">
+    <a class="navItem" href="index.html">Resolutions</a>
+      <a class="navItem" href="about.html">JetLoan</a>
+      <a class="navItem" href="contact.html">QB Database</a>
+      <a class="navItem" href="contactQM.html">Q-municate</a>
     </div>
-
-
+    
   <!-- Large modal -->
 
   <div class="modal fade bs-example-modal-lg in" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true" id="auto-close">
@@ -43,11 +33,11 @@
       <div class="modal-content">
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-          <h4 class="modal-title" id="myLargeModalLabel">QuickBlox Sample Custom Object</h4>
+          <h4 class="modal-title" id="myLargeModalLabel">Add new post</h4>
           </div>
         <div class="modal-body clearfix">
-          <input type="text" id="title_post" placeholder="Enter a title" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-          <textarea id="body_post" type="text" placeholder="Enter the text body" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"></textarea>
+          <input type="text" id="title_post" placeholder="Enter a Filename" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+          <textarea id="body_post" type="text" placeholder="Enter the File description" class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"></textarea>
         <button class="btn btn-primary" id="send_post" type="button" data-dismiss="modal" aria-hidden="true">Add new post</button>
           </div>
       </div>
@@ -63,15 +53,11 @@
   </div><!-- /.container -->
 
 
-  <script src="https://cdn.digits.com/1/sdk.js" id="digits-sdk" async></script><!-- TWITTER_DIGITS SDK -->
-<!--  <script src="../../quickblox.min.js"></script> -->
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/quickblox/2.4.0/quickblox.min.js"></script>
-  
-    <script src="configCO.js"></script>
-    <script src="mainCO.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/quickblox/2.4.0/quickblox.min.js"></script>
+ <script src="configCO.js"></script>
+  <script src="mainCO.js"></script>
 
   </body>
 </html>
