--- a/client/about.html
+++ b/client/about.html
@@ -53,29 +53,29 @@
         <!-- User login -->
         <div class="row">
           <h3>User Sign In</h3>
-          <form class="form-horizontal" role="form">
-            <div class="form-group">
-              <label class="control-label col-sm-2" for="usr_sgn_n_lgn">Login:</label>
-              <div class="col-sm-6">
-                <input type="text" class="form-control" id="usr_sgn_n_lgn" placeholder="Enter login">
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="control-label col-sm-2" for="usr_sgn_n_pwd">Password:</label>
-              <div class="col-sm-6">
-                <input type="password" class="form-control" id="usr_sgn_n_pwd" placeholder="Enter password">
-              </div>
-            </div>
-            <div class="form-group">
-              <div class="col-sm-offset-2 col-sm-10">
-                <button type="button" class="btn btn-primary" id="sign_in" data-toggle="modal" data-target="#progressModal">Try</button>
-              </div>
-            </div>
-          </form>
+      <form action="/action_page.php">
+    <div class="login-page">
+  <div class="form">
+    <form class="register-form">
+      <input type="text" placeholder="name" />
+      <input type="password" placeholder="password" />
+      <input type="text" placeholder="email address" />
+      <button>create</button>
+      <p class="message">Already registered? <a href="#">Sign In</a></p>
+    </form>
+    <form class="login-form">
+      <input type="text" placeholder="username" />
+      <input type="password" placeholder="password" />
+      <button>login</button>
+      <p class="message">Not registered? <a href="#">Create an account</a></p>
+    </form>
+  </div>
+</div>
+</form>
         </div>
 
         <!-- User social login -->
-        <div class="row">
+<!--        <div class="row">
           <h3>User Sign In with social provider</h3>
           <form class="form-horizontal" role="form">
             <div class="form-group">
@@ -103,9 +103,9 @@
             </div>
           </form>
         </div>
-
+-->
         <!-- User TWITTER_DIGITS login -->
-        <div class="row">
+<!--        <div class="row">
           <h3>User Sign In with Twitter Digits</h3>
           <form class="form-horizontal" role="form">
             <div class="form-group">
@@ -115,7 +115,7 @@
             </div>
           </form>
         </div>
-
+-->
         <!-- User logout -->
         <div class="row">
           <h3>User Sign Out</h3>
@@ -127,7 +127,6 @@
             </div>
           </form>
         </div>
-
 
         <!-- Users get -->
         <div class="row">
@@ -165,7 +164,7 @@
         </div>
 
         <!-- User update -->
-        <div class="row">
+ <!--       <div class="row">
           <h3>User Update</h3>
           <form class="form-horizontal" role="form">
             <div class="form-group">
@@ -187,9 +186,9 @@
             </div>
           </form>
         </div>
-
+-->
         <!-- Delete user  -->
-        <div class="row">
+<!--        <div class="row">
           <h3>Delete user</h3>
           <form class="form-horizontal" role="form">
             <div class="form-group">
@@ -214,7 +213,7 @@
             </div>
           </form>
         </div>
-
+-->
         <!-- Reset password -->
         <div class="row">
           <h3>Reset password</h3>
