--- a/client/contact.html
+++ b/client/contact.html
@@ -16,7 +16,7 @@
     <h1>Robby’s Resolutions</h1>
     <p class="tagline">Hosted on Heroku for the work to see</p>
     <div class="nav">
-    <a class="navItem" href="index.html">Resolutions</a>
+    <a class="navItem" href="start.html">Resolutions</a>
       <a class="navItem" href="about.html">JetLoan</a>
       <a class="navItem" href="contact.html">QB Database</a>
       <a class="navItem" href="contactQM.html">Q-municate</a>
