--- a/client/contact.html
+++ b/client/contact.html
@@ -16,7 +16,7 @@
     <h1>Robby’s Resolutions</h1>
     <p class="tagline">Hosted on Heroku for the work to see</p>
     <div class="nav">
-    <a class="navItem" href="start.html">Resolutions</a>
+    <a class="navItem" href="index.html">Resolutions</a>
       <a class="navItem" href="about.html">JetLoan</a>
       <a class="navItem" href="contact.html">QB Database</a>
       <a class="navItem" href="contactQM.html">Q-municate</a>
@@ -39,6 +39,18 @@
       </div>
     </div>
   </div>
+          <!-- User login -->
+
+    <div class="login-page">
+  <div class="form">
+    <form class="login-form">
+       <input type="text" class="form-control" id="username" placeholder="Enter login">
+ <input type="password" class="form-control" id="password" placeholder="Enter password">
+      <button id="sign_in">Login</button>
+    </form>
+  </div>
+</div>
+
    <p></p>
   <div class="container" style="position:relative;">
   <!--  <a href="https://github.com/QuickBlox/quickblox-javascript-sdk/tree/gh-pages/samples/customobjects"
